@startuml

title __SIMPLECALCULATORAPP's Class Diagram__\n

  namespace  {
    class CalculatorLayout {
    }
  }
  

  namespace  {
    class Calculator {
    }
  }
  

  namespace  {
    class MathHandler {
    }
  }
  

  namespace  {
    class MyButton {
    }
  }
  

  CalculatorLayout -up-|> acm.graphics.GCompound
  Calculator -up-|> acm.program.GraphicsProgram
  Calculator o-- CalculatorLayout : buttonLayout
  MyButton -up-|> acm.graphics.GCompound


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
